Login overflow fix

--- a/cistoca_frontend/styles/cleanCity.css
+++ b/cistoca_frontend/styles/cleanCity.css
@@ -10,10 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-self:center;
-  min-height: 410px;
   background-color: #9DEC8F;
-  padding: 20px;
-  padding-bottom: 10px;
-  margin: 15px 0px;
   border-radius: 15px;
+  padding: 20px 15px;
 }
